<resources>
    <string name="app_name">Pokemon Battle Simulator</string>
    <string name="PlayFriendsButt">Battle Friends</string>
    <string name="FindBattleButt">Find Battle</string>
    <string name="TeamBuildButt">Teambuilder</string>
    <string name="action_settings">Settings</string>
    <string name="NewTeam">Create Team</string>
    <string name="PokeSpecies">Species</string>
    <string name="Teams">Your Teams</string>
    <string name="AddToTeam">Add to team</string>
    <string name="SpriteDesc">Pokemon Sprite</string>
    <string name="CreateGameButt">Create Game</string>
    <string name="JoinGameButt">Join Game</string>
    <string name="PlayerNameHint">Enter your name</string>
    <string name="confirmNameButt">Confirm</string>
    <string name="fightButton">Fight</string>
    <string name="pokemonButton">Pokemon</string>
    <string name="DeleteTeamButt">Delete Team</string>
    <string name="UseTeamButt">Make Active Team</string>
    <string name="GoToBattleButt">Go to Battle</string>
    <string name="EnterGameCodeHint">Enter game code</string>
    <string name="MainMenuButt">Back To Main Menu</string>
    <string name="TimingHint">Allow joining player to confirm their name before pressing \"go to battle\"</string>
</resources>
